--- a/About/aboutStyle.css
+++ b/About/aboutStyle.css
@@ -1,54 +1,38 @@
 body{
   background: url("background.jpg");
+  padding: 0;
+  margin: 0;
 }
 
-.about-section {
-  flex: 33.33%;
-  padding: 0 16px;
-    text-align: left;
-    color: whitesmoke;
-  }
-  
-  .about-section h1 {
-    font-size: 50px;
-    margin-top: 0;
-  }
-  
-  .about-section p {
-    font-size: 20px;
-    line-height: 1.5;
-    margin-bottom: 30px;
-    margin-right: 50%;
-  }
-  .row {
-    float: left;
-    width: 50%;
-  }
+.white{
+  color:white;
+}
 
-  .column {
-    flex: 33.33%;
-    padding: 0 16px;
-  }
-  
-  .column h3 {
-    font-size: 30px;
-    margin-top: 0;
-  }
-  
-  .column p {
-    font-size: 16px;
-    line-height: 1.5;
-    color: whitesmoke;
-  }
+.paragraph-left{
+text-align: left;
+}
 
-  .right{
-    margin-bottom: 2%;
-    text-align: right;
-    float: right;
-  }
+.paragraph-right{
+text-align: right;
+}
 
-  iframe{
-    margin-top: 10%;
-    float: right;
-    border:4px solid rgba(255, 0, 42, 255);
-    }
+.Header{
+  text-align: center;
+  font-size: 280%;
+}
+
+.Information-left{
+  text-align: left;
+  font-size: x-large;
+}
+
+.Information-right{
+  text-align: right;
+  font-size: x-large;
+}
+
+.location{
+  height: 450px;
+  width: 99.5%;
+}
+
