--- a/Booking/booking.css
+++ b/Booking/booking.css
@@ -11,6 +11,15 @@ body {
   padding-right: 2%;
   background-color: rgba(0, 0, 0, 0.6);
   }
+  
+  .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
 
 div.elem-group {
     margin: 20px 0;
