--- a/About/aboutStyle.css
+++ b/About/aboutStyle.css
@@ -44,12 +44,14 @@ margin-left: 50%;
   max-height: 500px;
 }
 
-.image-left{
-  float: left;
+.image{
   width: 27%;
 }
 
+.image-left{
+  padding-left: 66%;
+}
+
 .image-right{
-  float: right;
-  width: 27%;
-} 
+  
+}  
