--- a/Booking/booking.css
+++ b/Booking/booking.css
@@ -7,6 +7,7 @@ body {
   .bookform{
     width: 30%;
   margin: 0 auto;
+  margin-top: 3.5%;
   padding: 26px;
   padding-right: 2%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -17,7 +18,7 @@ body {
     height: 100px;
     border-radius: 50%;
     position: absolute;
-    top: 18px;
+    top: 68px;
     left: calc(50% - 50px);
 }
 
