--- a/About/aboutStyle.css
+++ b/About/aboutStyle.css
@@ -4,11 +4,27 @@ body{
   margin: 0;
 }
 
+
+.Header{
+  font-size: 280%;
+  text-align: center;
+  margin-bottom: 5%;
+}
+
+
+.container{
+  margin-top: 2.5%;
+}
+
 .white{
   color:white;
 }
 
- .paragraph-left{
+.image{
+  height: 450px;  
+}
+
+.paragraph-left{
 text-align: left;
 margin-right: 50%;
 }
@@ -18,20 +34,10 @@ text-align: right;
 margin-left: 50%;
 }
 
-.Header{
-  text-align: center;
+.location-text{
   font-size: 280%;
-}
-
-.Information-left{
-  text-align: left;
-  font-size: x-large;
-  margin-left: 20px;
-}
-
-.Information-right{
-  text-align: right;
-  font-size: x-large;
+  text-align: center;
+  color: white;
 }
 
 .location{
@@ -39,19 +45,14 @@ margin-left: 50%;
   width: 99.5%;
 }
 
-.container{
-  height: 250px;
-  max-height: 500px;
+p{
+  margin-left: 8%;
+  margin-right: 8%;
+  text-align: center;
+  font-size: x-large;
 }
 
-.image{
-  width: 27%;
+h2{
+  text-align: center;
+  font-size: xx-large;
 }
-
-.image-left{
-  padding-left: 66%;
-}
-
-.image-right{
-  padding-left: 66%;
-}  
