--- a/About/aboutStyle.css
+++ b/About/aboutStyle.css
@@ -1,61 +1,85 @@
-body{
-  background: url("background.jpg");
-  padding: 0;
+  body {
+  background:url('background.jpg');
   margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+*{
+  box-sizing: border-box;
 }
 
 
-.Header{
-  font-size: 280%;
-  text-align: center;
-  margin-bottom: 5%;
+.section-heading {
+  font-size: 36px;
+  color: white;
 }
 
 .container{
-  margin-top: 2.5%;
+  height: 0px;
+  width: 45%;
+  display: inline-block;
+  padding-left: 8%;
 }
 
-.white{
-  color:white;
+.container .info{
+  width: 49%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 30px;
+  border-radius: 5px;
+  margin: 0 auto;
 }
-
-.image{
-  height: 450px;  
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.paragraph-left{
-text-align: left;
-margin-right: 50%;
-}
-
-.paragraph-right{
-text-align: right;
-margin-left: 50%;
-}
-
-.location-text{
-  font-size: 280%;
-  text-align: center;
+.info h2 {
+  font-size: 24px;
   color: white;
+  margin-bottom: 10px;
 }
+
+.info p {
+  color: white;
+  line-height: 1.5;
+}
+
+.image {
+  width: 100%;
+  max-width: 250px;
+  height: auto;
+  margin-top: 20px;
+}
+
+.location-container {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.location-heading {
+  font-size: 36px;
+  color: white;
+  margin-bottom: 20px;
+}
+
 
 .location{
   height: 450px;
   width: 99.5%;
 }
 
-p{
-  margin-left: 8%;
-  margin-right: 8%;
-  text-align: center;
-  font-size: x-large;
-}
 
-h2{
-  text-align: center;
-  font-size: xx-large;
+
+@media screen and (max-width: 480px) {
+  .container {
+      flex-direction: column;
+  }
+  
+  .info {
+      width: auto;
+      margin: 20px;
+  }
 }
+ 
+
+ 
