--- a/About/aboutStyle.css
+++ b/About/aboutStyle.css
@@ -1,11 +1,11 @@
-  body {
+  /* body {
   background:url('background.jpg');
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
-*{
+ *{
   box-sizing: border-box;
 }
 
@@ -31,7 +31,7 @@
   align-items: center;
   padding: 20px 30px;
   border-radius: 5px;
-  margin: 0 auto;
+  margin: 3px 70px;
 }
 .info h2 {
   font-size: 24px;
@@ -52,8 +52,7 @@
 }
 
 .location-container {
-  text-align: center;
-  margin-bottom: 40px;
+margin-top: 30%;
 }
 
 .location-heading {
@@ -81,5 +80,79 @@
   }
 }
  
+ */
 
- 
+ * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-image: url('background.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 0;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  color: white;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+h1 {
+  color: white;
+  font-size: 46px;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+footer {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 10px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+
+
+.map-container {
+  position: relative;
+  padding-bottom: 75%; /* Aspect ratio for responsive map container */
+  height: 0;
+  overflow: hidden;
+}
+
+.location-map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 75%;
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 10px;
+  }
+}
