--- a/AdminPanel/Styles/editpage.css
+++ b/AdminPanel/Styles/editpage.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: url('../Images/backgroundedit.jpg');
+    background: url('background.jpg');
     color: white;
     padding: 0;
     font-family: sans-serif;
